Ficheros de mantenimiento

--- a/app/Resources/views/cargo/index.html.twig
+++ b/app/Resources/views/cargo/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Cargos list</h1>
 
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Descripcion</th>
