--- a/app/Resources/views/cliente/index.html.twig
+++ b/app/Resources/views/cliente/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Clientes list</h1>
 
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -61,7 +61,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('cliente_new') }}">Create a new cliente</a>
+            <a href="{{ path('cliente_new') }}">Crea un nuevo cliente</a>
         </li>
     </ul>
 {% endblock %}
