--- a/app/Resources/views/menu/index.html.twig
+++ b/app/Resources/views/menu/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Menus list</h1>
 
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Fecha</th>
