--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,8 +5,15 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{ asset('/css/reset.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{ asset('/css/main.css')}}">
+
+    <script type="text/javascript" src="{{ asset('/js/jquery.js')}}"></script>
+    <script type="text/javascript" src="{{ asset('/js/carouFredSel.js')}}"></script>
+    <script type="text/javascript" src="{{ asset('/js/easing.js')}}"></script>
+    <script type="text/javascript" src="{{ asset('/js/main.js')}}"></script>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welkkkkkcome!{% endblock %}</title>
+        <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
