--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,76 +1,533 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div id="wrapper">
-        <div id="container">
-            <div id="welcome">
-                <h1><span>Welcome to</span> Symfony {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}</h1>
-            </div>
+ 
+<body>
 
-            <div id="status">
-                <p>
-                    <svg id="icon-status" width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#759E1A"/></svg>
+	<!--  start header  -->
+	<header>
+		<div class="wrapper">
+			<div class="logo">
+				<a href=""><img src="img/logo.png" alt="Resto" title=""/></a>
+			</div>
 
-                    Your application is now ready. You can start working on it at:
-                    <code>{{ base_dir }}</code>
-                </p>
-            </div>
+			<nav>
+				<ul>
+					<!--<li><a href="" class="active">Home</a></li>-->
+					<li><a href="">Our Story</a></li>
+					<li><a href="">Menu</a></li>
+					<li><a href="">Reservations</a></li>
+					<li><a href="">News</a></li>
+					<li><a href="">Reviews</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header><!--  end header  -->
 
-            <div id="next">
-                <h2>What's next?</h2>
-                <p>
-                    <svg id="icon-book" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="-12.5 9 64 64" enable-background="new -12.5 9 64 64" xml:space="preserve">
-                        <path fill="#AAA" d="M6.8,40.8c2.4,0.8,4.5-0.7,4.9-2.5c0.2-1.2-0.3-2.1-1.3-3.2l-0.8-0.8c-0.4-0.5-0.6-1.3-0.2-1.9
-                            c0.4-0.5,0.9-0.8,1.8-0.5c1.3,0.4,1.9,1.3,2.9,2.2c-0.4,1.4-0.7,2.9-0.9,4.2l-0.2,1c-0.7,4-1.3,6.2-2.7,7.5
-                            c-0.3,0.3-0.7,0.5-1.3,0.6c-0.3,0-0.4-0.3-0.4-0.3c0-0.3,0.2-0.3,0.3-0.4c0.2-0.1,0.5-0.3,0.4-0.8c0-0.7-0.6-1.3-1.3-1.3
-                            c-0.6,0-1.4,0.6-1.4,1.7s1,1.9,2.4,1.8c0.8,0,2.5-0.3,4.2-2.5c2-2.5,2.5-5.4,2.9-7.4l0.5-2.8c0.3,0,0.5,0.1,0.8,0.1
-                            c2.4,0.1,3.7-1.3,3.7-2.3c0-0.6-0.3-1.2-0.9-1.2c-0.4,0-0.8,0.3-1,0.8c-0.1,0.6,0.8,1.1,0.1,1.5c-0.5,0.3-1.4,0.6-2.7,0.4l0.3-1.3
-                            c0.5-2.6,1-5.7,3.2-5.8c0.2,0,0.8,0,0.8,0.4c0,0.2,0,0.2-0.2,0.5c-0.2,0.3-0.3,0.4-0.2,0.7c0,0.7,0.5,1.1,1.2,1.1
-                            c0.9,0,1.2-1,1.2-1.4c0-1.2-1.2-1.8-2.6-1.8c-1.5,0.1-2.8,0.9-3.7,2.1c-1.1,1.3-1.8,2.9-2.3,4.5c-0.9-0.8-1.6-1.8-3.1-2.3
-                            c-1.1-0.7-2.3-0.5-3.4,0.3c-0.5,0.4-0.8,1-1,1.6c-0.4,1.5,0.4,2.9,0.8,3.4l0.9,1c0.2,0.2,0.6,0.8,0.4,1.5c-0.3,0.8-1.2,1.3-2.1,1
-                            c-0.4-0.2-1-0.5-0.9-0.9c0.1-0.2,0.2-0.3,0.3-0.5s0.1-0.3,0.1-0.3c0.2-0.6-0.1-1.4-0.7-1.6c-0.6-0.2-1.2,0-1.3,0.8
-                            C4.3,38.4,4.7,40,6.8,40.8z M46.1,20.9c0-4.2-3.2-7.5-7.1-7.5h-3.8C34.8,10.8,32.7,9,30.2,9L-2.3,9.1c-2.8,0.1-4.9,2.4-4.9,5.4
-                            L-7,58.6c0,4.8,8.1,13.9,11.6,14.1l34.7-0.1c3.9,0,7-3.4,7-7.6L46.1,20.9z M-0.3,36.4c0-8.6,6.5-15.6,14.5-15.6
-                            c8,0,14.5,7,14.5,15.6S22.1,52,14.2,52C6.1,52-0.3,45-0.3,36.4z M42.1,65.1c0,1.8-1.5,3.1-3.1,3.1H4.6c-0.7,0-3-1.8-4.5-4.4h30.4
-                            c2.8,0,5-2.4,5-5.4V17.9h3.7c1.6,0,2.9,1.4,2.9,3.1V65.1L42.1,65.1z"/>
-                    </svg>
 
-                    Read the documentation to learn
-                    <a href="http://symfony.com/doc/{{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION')[:3] }}/page_creation.html">
-                        How to create your first page in Symfony
-                    </a>
-                </p>
-            </div>
+	<!--  start hero  -->
+	<section class="hero">
+		<div class="caption">
+			<h3>This Template Is Awesome</h3>
+			<h4>
+				<span class="rsep"></span>
+				resto restaurant home page website template
+				<span class="lsep"></span>
+			</h4>
+			
+		</div>
+	</section><!--  end hero  -->
 
-        </div>
-    </div>
-{% endblock %}
 
-{% block stylesheets %}
-<style>
-    body { background: #F5F5F5; font: 18px/1.5 sans-serif; }
-    h1, h2 { line-height: 1.2; margin: 0 0 .5em; }
-    h1 { font-size: 36px; }
-    h2 { font-size: 21px; margin-bottom: 1em; }
-    p { margin: 0 0 1em 0; }
-    a { color: #0000F0; }
-    a:hover { text-decoration: none; }
-    code { background: #F5F5F5; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
-    #wrapper { background: #FFF; margin: 1em auto; max-width: 800px; width: 95%; }
-    #container { padding: 2em; }
-    #welcome, #status { margin-bottom: 2em; }
-    #welcome h1 span { display: block; font-size: 75%; }
-    #icon-status, #icon-book { float: left; height: 64px; margin-right: 1em; margin-top: -4px; width: 64px; }
-    #icon-book { display: none; }
+	<!--  start menu  -->
+	<section class="menu">
+		<div class="wrapper">
+			<div class="menu_title">
+				<h2>The Menu</h2>
+			</div>
+			
+			<div class="mean_menu">
+				<!--  left menu row  -->
+				<article class="lmenu">
+					<ul>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+							<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Metus varius laoreet.</h3>
+								<p class="item_desc">Chicken, mozzarella cheese, onions.</p>
+							</div>
+							<h4 class="price">$62</h4>
+							<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Donec sodales magna.</h3>
+								<p class="item_desc">Tuna, Sweetcorn, Cheese.</p>
+							</div>
+							<h4 class="price">$25</h4>
+							<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Saugue velit cursus.</h3>
+								<p class="item_desc">Pineapple, Minced Beef, Cheese.</p>
+							</div>
+							<h4 class="price">$30</h4>
+							<span class="separator"></span>
+						</li>
+					</ul>
+				</article>
 
-    @media (min-width: 768px) {
-        #wrapper { width: 80%; margin: 2em auto; }
-        #icon-book { display: inline-block; }
-        #status a, #next a { display: block; }
+				<!--  right menu row  -->
+				<article class="rmenu">
+					<ul>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Arcu pede enim justo.</h3>
+								<p class="item_desc">Tuna, Sweetcorn, Cheese.</p>
+							</div>
+							<h4 class="price">$45</h4>
+							<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Cras dapibussemper nisi.</h3>
+								<p class="item_desc">Pineapple, Minced Beef, Cheese.</p>
+							</div>
+							<h4 class="price">$32</h4>
+							<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Quam semper libero.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$15</h4>
+							<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Nam eget dui Etiam.</h3>
+								<p class="item_desc">Chicken, mozzarella cheese, onions.</p>
+							</div>
+							<h4 class="price">$35</h4>
+							<span class="separator"></span>
+						</li>
+					</ul>
+				</article>
+			</div>
 
-        @-webkit-keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        @keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        .sf-toolbar { opacity: 0; -webkit-animation: fade-in 1s .2s forwards; animation: fade-in 1s .2s forwards;}
-    }
-</style>
+			<!--  hidden menu items  -->
+			<div class="hidden_items">
+				<!--  left menu row  -->
+				<article class="lmenu">
+					<ul>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+					</ul>
+				</article>
+
+				<!--  right menu row  -->
+				<article class="rmenu">
+					<ul>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+						<li>
+							<div class="item_info">
+								<h3 class="item_name">Voluptate cillum fugiat.</h3>
+								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+							</div>
+							<h4 class="price">$50</h4>
+						<span class="separator"></span>
+						</li>
+					</ul>
+				</article>
+			</div>
+
+			<div class="load-more">
+				<a href="#" id="more_items">
+					show more
+					<hr/>
+					<span class="bottom_arrow"></span>
+				</a>
+			</div>
+		</div>
+	</section><!--  end menu  -->
+
+
+	<!--  start featured dishes  -->
+	<section class="featured_dishes">
+		<div class="wrapper">
+			<section class="info">
+				<div class="title">
+					<h3>Featured Dishes</h3>
+					<span class="separator"></span>
+				</div>
+				<div class="slider_nav" id="slider_nav">
+				</div>
+			</section>
+
+			<section class="dishes" id="dishes">
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish1.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Fugiat nulla sint</h2></a>
+						<h3>$30</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish2.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Daute irure dolor</h2></a>
+						<h3>$24</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish3.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Officia deserunt mollit</h2></a>
+						<h3>$60</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish4.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Pim minim veniam</h2></a>
+						<h3>$17</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish1.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Fugiat nulla sint</h2></a>
+						<h3>$30</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish2.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Daute irure dolor</h2></a>
+						<h3>$24</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish3.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Officia deserunt mollit</h2></a>
+						<h3>$60</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish4.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Pim minim veniam</h2></a>
+						<h3>$17</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish1.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Fugiat nulla sint</h2></a>
+						<h3>$30</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish2.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Daute irure dolor</h2></a>
+						<h3>$24</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish3.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Officia deserunt mollit</h2></a>
+						<h3>$60</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</article>
+
+				<article>
+					<div class="dishe_img">
+						<a href="#"><img src="img/dish4.jpg" alt="" title=""/></a>					
+					</div>
+					<div class="dish_info">
+						<a href="#"><h2>Pim minim veniam</h2></a>
+						<h3>$17</h3>
+					</div>
+					<ul class="rating">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li class="no-star"></li>
+					</ul>
+				</article>
+
+			</section>
+		</div>
+	</section><!--  end featured_dishes  -->
+
+
+	<!--  start gallery  -->
+	<section class="gallery">
+		<div class="wrapper">
+			<section class="info">
+				<div class="title">
+					<h3>The Gallery</h3>
+					<span class="separator"></span>
+				</div>
+			</section>
+
+			<div class="media">
+				<section>
+					<a href="#">
+						<img src="img/img1.jpg" alt="" title=""/>
+					</a>
+				</section>
+
+				<section>
+					<div class="hhalf">
+						<a href="#">
+							<img src="img/img2.jpg" alt="" title=""/>
+						</a>
+					</div>
+					<div class="hhalf">
+						<a href="#">
+							<img src="img/img3.jpg" alt="" title=""/>
+						</a>
+					</div>
+				</section>
+
+				<section>
+					<div class="hhalf">
+						<a href="#">
+							<img src="img/img4.jpg" alt="" title=""/>
+						</a>
+					</div>
+					<div class="hhalf">
+						<a href="#">
+							<img src="img/img5.jpg" alt="" title=""/>
+						</a>
+					</div>
+				</section>
+			</div>
+		</div>
+	</section><!--  end gallery  -->
+
+
+	<!--  start footer  -->
+	<footer>
+		<div class="wrapper">
+			<!-- adresse1  -->
+			<section class="adress">
+				<p>New York Restaurant</p> 
+				<p class="location">3926 Anmoore Road<br/>
+				New York, NY 10014</p>
+				<p class="phone">718-749-1714</p>
+			</section>
+
+			<!--  adress2  -->
+			<section class="adress">
+				<p>France Restaurant</p>
+				<p class="location">68, rue  de la Couronne<br/>
+				75002 PARIS </p>
+				<p class="phone">02.94.23.69.56</p>
+			</section>
+
+			<!--  footer navigation  -->
+			<section class="footer_nav">
+				<nav>
+					<ul>
+						<li><a href="">Blog</a></li>
+						<li><a href="">Careers</a></li>
+						<li><a href="">Privacy Policy</a></li>
+						<li><a href="">Contact</a></li>
+					</ul>
+				</nav>
+			</section>
+
+			<!--  footer copyrights  -->
+			<section class="copyrights">
+				<img src="img/footer_logo.png" class="footer_logo" alt="" title="">
+				<p>© All Rights Reserved 2014.</p>
+				<p>Find  More at <a href="http://pixelhint.com" target="_blank">Pixelhint.com</a></p>	
+			</section>
+		</div>
+	</footer><!--  end footer  -->
+    <script src='../ga.js'></script>
+
+</body>
+</html>
+
+
+  
 {% endblock %}
