--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -14,11 +14,11 @@
 			<nav>
 				<ul>
 					<!--<li><a href="" class="active">Home</a></li>-->
-					<li><a href="">Our Story</a></li>
+					<li><a href="">Nuestra historia</a></li>
 					<li><a href="">Menu</a></li>
-					<li><a href="">Reservations</a></li>
-					<li><a href="">News</a></li>
-					<li><a href="">Reviews</a></li>
+					<li><a href="">Reservas</a></li>
+					<li><a href="">Novedades</a></li>
+					<li><a href="">Area clientes</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -28,10 +28,10 @@
 	<!--  start hero  -->
 	<section class="hero">
 		<div class="caption">
-			<h3>This Template Is Awesome</h3>
+                    <h3><strong>Casa Irene</strong></h3>
 			<h4>
 				<span class="rsep"></span>
-				resto restaurant home page website template
+				el restaurante donde te sientes en casa
 				<span class="lsep"></span>
 			</h4>
 			
@@ -52,18 +52,18 @@
 					<ul>
 						<li>
 							<div class="item_info">
-								<h3 class="item_name">Voluptate cillum fugiat.</h3>
-								<p class="item_desc">Cheese, tomato, mushrooms, onions.</p>
+								<h3 class="item_name">Granola casera de avena.</h3>
+								<p class="item_desc">Copos de avena, dátiles, sopera de canela.</p>
 							</div>
-							<h4 class="price">$50</h4>
+							<h4 class="price">€50</h4>
 							<span class="separator"></span>
 						</li>
 						<li>
 							<div class="item_info">
-								<h3 class="item_name">Metus varius laoreet.</h3>
-								<p class="item_desc">Chicken, mozzarella cheese, onions.</p>
+								<h3 class="item_name">Desayuno vegano.</h3>
+								<p class="item_desc">Compota manzanas, platanos, rama de canela.</p>
 							</div>
-							<h4 class="price">$62</h4>
+							<h4 class="price">€20</h4>
 							<span class="separator"></span>
 						</li>
 						<li>
