--- a/app/Resources/views/reservacliente.html.twig
+++ b/app/Resources/views/reservacliente.html.twig
@@ -8,21 +8,21 @@
         <!--  start header  -->
         <header>
             <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-<script src="jquery.ui.datepicker-es.js"></script>
-<script>
-$(function () {
-$.datepicker.setDefaults($.datepicker.regional["es"]);
-$("#datepicker").datepicker({
+            <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+            <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+            <script src="jquery.ui.datepicker-es.js"></script>
+            <script>
+                $(function () {
+                    $.datepicker.setDefaults($.datepicker.regional["es"]);
+                    $("#datepicker").datepicker({
 
-firstDay: 1,
-onSelect: function (date) {
-alert(date)
-},
-});
-});
-</script>
+                        firstDay: 1,
+                        onSelect: function (date) {
+                            alert(date)
+                        },
+                    });
+                });
+            </script>
             <div class="wrapper">
                 <div class="logo">
                     <a href=""><img src="img/prueba1.jpg" alt="Resto" title=""/></a>
@@ -54,45 +54,42 @@ alert(date)
 
             </div>
         </section><!--  end hero  -->
-        
-        
-<div style="position: absolute; top: 700px; left: 300px">
-    <h2>Reseva tu mesa :</h2>
-    <form action="." oninput="range_control_value.value = range_control.valueAsNumber">
-<p>
-Nombre: 
-<br />
-<input type="text" name="name_control" autofocus required />
-<br />
-<br />
-Correo Electrónico: 
-<br />
-<input type="email" name="email_control" required />
-<br />
-<br />
 
-Número (min 1, max 10): 
-<br />
-<input type="number" name="number_control" min="1" max="10" value="1" />
-<br />
-<br />
-Teléfono: 
-<br />
-<input type="tel" name="tel_control" />
-<br />
-<br />
-<input type="submit" value="Enviar" />
-</p>
-</div>
+
+        <div style="position: absolute; top: 700px; left: 300px">
+            <h2>Reserva tu mesa :</h2>
+            <form action="." oninput="range_control_value.value = range_control.valueAsNumber">
+                <p>
+                    Nombre: 
+                    <br />
+                    <input type="text" name="name_control" autofocus required />
+                    <br />
+                    Correo Electrónico: 
+                    <br />
+                    <input type="email" name="email_control" required />
+                    <br />
+
+                    Número (min 1, max 10): 
+                    <br />
+                    <input type="number" name="number_control" min="1" max="10" value="1" />
+                    <br />
+
+                    Teléfono: 
+                    <br />
+                    <input type="tel" name="tel_control" />
+                    <br />
+                    <br />
+                    <input type="submit" value="Enviar" />
+                </p>
+        </div>
         <div style="position: absolute; top: 735px; left: 800px" >
             Fecha: <input type="text" id="datepicker" />
-            
+
         </div>
-           
-        
+
+
     </boby>
-    
+
 </html>
 {% endblock %}
 
-               
