--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,13 +33,14 @@
                 <div class="col-md-6">
                     <nav>
                         <ul>
-                            <!--<li><a href="" class="active">Home</a></li>-->
                             <li><a href="{{ path ('nuestrahistoria') }}">Nuestra historia</a></li>
-                            <li><a href="{{ path ('carta') }}">Carta</a></li>
+                            <li><a href="{{ path ('muestracarta') }}">Carta</a></li>
                             <li><a href="{{ path ('reservacliente') }}">Reservas</a></li>
                             <li><a href="{{ path ('muestracomment') }}">Comentarios</a></li>
-                            <li><a href="{{ path ('areaclientes') }}">Área clientes</a></li>
-                            <li><a href="{{ path ('dondeestamos') }}">¿Dónde estamos?</a></li>
+                            <li><a href="{{ path ('dondeestamos') }}">Dónde estamos</a></li>
+                            <li><a href="{{ path ('areaclientes') }}">M clientes</a></li>
+                            <li><a href="{{ path ('tablas') }}">M Tablas</a></li>
+                                                        
                         </ul>
                     </nav>
                 </div>
@@ -83,7 +84,7 @@
 
             </div>
         </section><!--  end hero  -->
-  
+
     {% endblock %}
 {% block javascripts %}{% endblock %}
 
