--- a/app/Resources/views/reserva/show.html.twig
+++ b/app/Resources/views/reserva/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Reserva</h1>
 
-    <table>
+    <table class="table">
         <tbody>
             <tr>
                 <th>Fecha</th>
