--- a/app/Resources/views/tablas.html.twig
+++ b/app/Resources/views/tablas.html.twig
@@ -1,6 +1,6 @@
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
-
+{% block muestra %} {% endblock %}
 {% block body %}
     <div class="container alert alert-success">
         <h1>Mantenimiento del Restaurante</h1>
