--- a/app/Resources/views/reserva/index.html.twig
+++ b/app/Resources/views/reserva/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Reservas list</h1>
 
-    <table border="1">
+    <table  class="table" border="1">
         <thead>
             <tr>
                 <th>Fecha</th>
